feat: update endpoint path to fit RESTful API
