# src/controllers/routes/updateApi.ts
@@ -12,81 +12,71 @@ export default async function updateApiInit() {
   const updateApi: IRouter = express.Router();
 
   // 更新個別資料
-  updateApi.put(
-    "/updateData",
-    verifyToken,
-    async (req: Request, res: Response) => {
-      console.log("updateData");
+  updateApi.put("/data", verifyToken, async (req: Request, res: Response) => {
+    console.log("updateData");
 
-      try {
-        const updateUtility = new UpdateUtility(req.db);
-        const userId = req.user!.userId;
+    try {
+      const updateUtility = new UpdateUtility(req.db);
+      const userId = req.user!.userId;
 
-        const params: UpdateObj = {
-          dbName: req.body.dbName,
-          table: req.body.table,
-          data: req.body.data,
-          where: req.body.where,
-        };
-        const data = await updateUtility.update(userId, params);
+      const params: UpdateObj = {
+        dbName: req.body.dbName,
+        table: req.body.table,
+        data: req.body.data,
+        where: req.body.where,
+      };
+      const data = await updateUtility.update(userId, params);
 
-        return res.status(200).json({ data: data });
-      } catch (err: any) {
-        console.error("Error in updateData: ", err);
+      return res.status(200).json({ data: data });
+    } catch (err: any) {
+      console.error("Error in updateData: ", err);
 
-        if ("sqlMessage" in err) {
-          return res.status(400).json({ error: true, message: err.sqlMessage });
-        }
-        return res.status(500).json({ error: true, message: err });
+      if ("sqlMessage" in err) {
+        return res.status(400).json({ error: true, message: err.sqlMessage });
       }
+      return res.status(500).json({ error: true, message: err });
     }
-  );
+  });
 
   // 插入新的 Row
-  updateApi.put(
-    "/insertData",
-    verifyToken,
-    async (req: Request, res: Response) => {
-      console.log("insertData");
+  updateApi.post("/data", verifyToken, async (req: Request, res: Response) => {
+    console.log("insertData");
 
-      try {
-        const [dbName, table, values] = [
-          req.body.dbName,
-          req.body.table,
-          req.body.values,
-        ];
+    try {
+      const [dbName, table, values] = [
+        req.body.dbName,
+        req.body.table,
+        req.body.values,
+      ];
 
-        if (!dbName || !table || !values) {
-          return res
-            .status(400)
-            .json({ error: true, message: "缺少必要的參數" });
-        }
-
-        const updateUtility = new UpdateUtility(req.db);
-        const userId = req.user!.userId;
-
-        const params: InsertObj = {
-          dbName: dbName,
-          table: table,
-          data: values,
-        };
-        const data = await updateUtility.insert(userId, params);
-
-        return res.status(200).json({ data: data });
-      } catch (err: any) {
-        console.error("Error in insertData: ", err);
-
-        if ("sqlMessage" in err) {
-          return res.status(400).json({ error: true, message: err.sqlMessage });
-        }
-        return res.status(500).json({ error: true, message: err });
+      if (!dbName || !table || !values) {
+        return res.status(400).json({ error: true, message: "缺少必要的參數" });
       }
+
+      const updateUtility = new UpdateUtility(req.db);
+      const userId = req.user!.userId;
+
+      const params: InsertObj = {
+        dbName: dbName,
+        table: table,
+        data: values,
+      };
+      const data = await updateUtility.insert(userId, params);
+
+      return res.status(200).json({ data: data });
+    } catch (err: any) {
+      console.error("Error in insertData: ", err);
+
+      if ("sqlMessage" in err) {
+        return res.status(400).json({ error: true, message: err.sqlMessage });
+      }
+      return res.status(500).json({ error: true, message: err });
     }
-  );
+  });
 
   // 修改表格加入新的 Column
   updateApi.put(
-    "/addColumn",
+    "/table/column",
     verifyToken,
     async (req: Request, res: Response) => {
       console.log("addColumn");
@@ -134,8 +124,8 @@ export default async function updateApiInit() {
   );
 
   // 修改表格刪除指定 Column
-  updateApi.put(
-    "/delColumn",
+  updateApi.delete(
+    "/table/column",
     verifyToken,
     async (req: Request, res: Response) => {
       console.log("delColumn");
