# src/swagger-output.json
@@ -31,7 +31,7 @@
         }
       }
     },
-    "/api/createUser": {
+    "/api/user": {
       "post": {
         "description": "",
         "parameters": [
@@ -73,8 +73,8 @@
         }
       }
     },
-    "/api/signin": {
-      "post": {
+    "/api/user/auth": {
+      "put": {
         "description": "",
         "parameters": [
           {
@@ -104,9 +104,7 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/api/auth": {
+      },
       "get": {
         "description": "",
         "parameters": [
@@ -120,6 +118,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -129,7 +130,46 @@
         }
       }
     },
-    "/api/createDb": {
+    "/api/user/guestAuth": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "account": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "dbHost": {
+                  "example": "any"
+                },
+                "userName": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/database": {
       "post": {
         "description": "",
         "parameters": [
@@ -139,9 +179,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "creatorUsername": {
-                  "example": "any"
-                },
                 "dbName": {
                   "example": "any"
                 }
@@ -153,13 +190,44 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "dbName": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/api/createTable": {
+    "/api/table": {
       "post": {
         "description": "",
         "parameters": [
@@ -186,68 +254,15 @@
           "200": {
             "description": "OK"
           },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/readDbsOrTables": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "dbName": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/api/readDbsAndTables": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "dbName": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/readData": {
-      "post": {
+      },
+      "delete": {
         "description": "",
         "parameters": [
           {
@@ -261,24 +276,6 @@
                 },
                 "table": {
                   "example": "any"
-                },
-                "select": {
-                  "example": "any"
-                },
-                "where": {
-                  "example": "any"
-                },
-                "groupBy": {
-                  "example": "any"
-                },
-                "orderBy": {
-                  "example": "any"
-                },
-                "orderDirection": {
-                  "example": "any"
-                },
-                "limit": {
-                  "example": "any"
                 }
               }
             }
@@ -288,14 +285,82 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/api/updateData": {
+    "/api/databases": {
+      "get": {
+        "tags": [
+          "Database"
+        ],
+        "description": "Endpoint to obtain all databases and their tables.",
+        "responses": {
+          "200": {
+            "description": "Database and tables data successfully obtained.",
+            "schema": {
+              "$ref": "#/definitions/Databases"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/data/query": {
       "post": {
+        "tags": [
+          "Data"
+        ],
+        "description": "Endpoint to query specific data from a table.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Data query information.",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/QueryRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Data successfully queried.",
+            "schema": {
+              "$ref": "#/definitions/QueryResponse"
+            }
+          },
+          "400": {
+            "description": "Bad request response"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/api/data": {
+      "put": {
         "description": "",
         "parameters": [
           {
@@ -324,14 +389,49 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/api/deleteData": {
+      },
       "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "dbName": {
+                  "example": "any"
+                },
+                "table": {
+                  "example": "any"
+                },
+                "values": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
         "description": "",
         "parameters": [
           {
@@ -357,10 +457,119 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
+      }
+    },
+    "/api/table/column": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "dbName": {
+                  "example": "any"
+                },
+                "table": {
+                  "example": "any"
+                },
+                "columnName": {
+                  "example": "any"
+                },
+                "columnType": {
+                  "example": "any"
+                },
+                "columnOption": {
+                  "example": "any"
+                },
+                "defaultValue": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "dbName": {
+                  "example": "any"
+                },
+                "table": {
+                  "example": "any"
+                },
+                "columnName": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/history": {
+      "get": {
+        "tags": [
+          "History"
+        ],
+        "description": "Endpoint to get the history of a user based on their group ID.",
+        "responses": {
+          "200": {
+            "description": "History data successfully obtained.",
+            "schema": {
+              "$ref": "#/definitions/History"
+            }
+          },
+          "400": {
+            "description": "Bad request due to SQL error"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
     }
   }
